# programming_gpus

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
include/: coordinates.hh  fourier_context.hh  fourier_coordinate.hh  fourier_point.hh
src/: main.cc  plotting.py  utils.cc
